# Multi-Robot-Algo

./: .gitignore  CITATION.cff  LICENSE  README.md  SPEAKER_SCRIPT.md  SearchFCR Research.html  SearchFCR_Conference_Presentation.pptx  SearchFCR_Research.html  SearchFCR_UHP_Symposium.html  SearchFCR_UHP_Symposium.pptx  UHP_Speech_Script.md  animate.py  animating.py  gen_html_pres.py  gen_slides.py  gen_uhp_slides.py  index.html  main.py  make_showcase.js  my_graph.gml  opengltest.py  pack_uhp.py  pack_uhp_v2.py  package-lock.json  package.json  pyproject.toml  rebuild_pptx.py  reproduce_thesis.py  showcase_presentation.pptx
.github/workflows/: ci.yml
Algo 3/: main.py  test.py
Auction-Game-Robotics/: main.py  test.py
Previous process/: animate.py  animating.py  opengltest.py
Previous process/Algo 3/: main.py  test.py
Previous process/Auction-Game-Robotics/: main.py  test.py
Previous process/greedyalgo/: main.py
backend/: requirements.txt  server.py
deploy/: deploy.sh  searchfcr-backend.service  searchfcr.fozhan.dev.nginx  update.sh
experiments/: __init__.py  _common.py  exp1_prior_misspec.py  exp2_target_delay.py  exp3_cost_sensitivity.py  exp4_significance.py  exp5_instance_scaling.py  exp6_adaptive_bid.py  exp7_prior_sensitivity.py  exp8_ci_table.py  regen_bid_fig.py
experiments/data/: exp1_prior_misspec.csv  exp2_target_delay.csv  exp3_cost_sensitivity.csv  exp4_significance.csv  exp4_stats.csv  exp4_wilcoxon.csv  (+10 more)
greedyalgo/: README.md  main.py  my_graph.gml
paper/: README.md  _theory_scaling.tex  paper.tex  ref.bib
pybullet_demo/: README.md  example_instance.json  make_video.py  replay.py  run_demo.py  scene.py
sar-sim/: index.html  package-lock.json  package.json  vite.config.ts
searchfcr/: __init__.py  __main__.py  _main_import.py  bids.py  bounds.py  cli.py  instance.py  metrics.py  models.py
slides-standalone/: slides.html
tests/: conftest.py  test_bids.py  test_cli.py  test_instance.py  test_models.py
thesis/: .gitignore  README.md  main.tex  make_thesis_figures.py  ref.bib
(+30 files in other folders)
